--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -7,9 +7,20 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.6;
-  color: #333;
+  color: #fff;
 }
 
+.hero-container {
+    min-height: 100%;
+    background: linear-gradient(to bottom, rgba(202, 202, 202, 0.089), rgba(0, 0, 29, 0.8)), 
+                url('images/Object.png');
+    background-size: cover;
+    aspect-ratio: 7 / 5;
+   
+    /* background-position: center; */
+    display: flex;
+    flex-direction: column;
+}
 img {
   max-width: 100%;
   display: block;
@@ -61,13 +72,3 @@ header nav a:hover {
   color: #ff5a5f;
 }
 
-hero-container {
-    min-height: 100%;
-    background: linear-gradient(to bottom, rgba(202, 202, 202, 0.089), rgba(0, 0, 29, 0.8)), 
-                url('images/Object.png');
-    background-size: cover;
-    aspect-ratio: 7 / 5;
-   
-    /* background-position: center; */
-    display: flex;
-    flex-direction: column;
