--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -224,7 +224,7 @@ nav ul li a:hover {
   height: 0;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-left: 15px solid #fff;
+  border-left: 15px solid #c271ff;
 }
 
 .tutorial-card h3 {
