--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -341,7 +341,7 @@ height: 35.35px;
 
 .FAQS-container{
     padding: 30px 40px;
-    text-align: center;
+    text-align: left;
 
 }
 .FAQS-container h2{
